# ElDuendecitoDeVianni

./: .gitignore  README.md  build_exe.ps1  config.example.json  launcher.py  politica_horario.xlsx  pyproject.toml  requirements.txt
demo/downloads/: GridViewExports.xlsx
demo/plantillas/Brothers/: 02_Acuerdo de Confidencialidad Brothers.docx  03_CARTA APERTURA CUENTA NOMINA BROTHERS.docx  04_OFERTA PAQUETE SALARIAL BROTHERS.docx  1_FICHA EMPLEADO BROTHERS.xlsx  4_OFERTA PAQUETE SALARIAL BROTHERS.docx  6_CARTA APERTURA CUENTA NOMINA BROTHERS.docx
demo/plantillas/Ines/: 02_Acuerdo de Confidencialidad Supermercado Ines.docx  03_CARTA APERTURA CUENTA NOMINA INES.docx  04_OFERTA PAQUETE SALARIAL INES ACTUAL.docx  3__STATIC__CONSENTIMIENTO INFORMADO PARA EL USO DE IMAGEN - SUPERMERCADO INES.docx  4_FERTA PAQUETE SALARIAL INES ACTUAL.docx  4_OFERTA PAQUETE SALARIAL INES ACTUAL.docx  5__STATIC__REGLAMENTO INTERNO INES.docx  6_CARTA APERTURA CUENTA NOMINA INES.docx
demo/templates/: 01_Contrato.docx  02_Formulario.xlsx  03_Autorizacion.docx
src/el_duendecito_de_vianni/: app.py  config.py  credentials.py  importer.py  logging_utils.py  mercury.py  office.py  processed_store.py  processor.py  spreadsheet.py  templates.py  utils.py  work_schedule.py
tests/: test_processing.py
