[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "el-duendecito-de-vianni"
version = "0.1.0"
description = "Aplicacion local para preparar documentos diarios de nuevos empleados."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "python-docx>=1.1",
    "pywin32>=306; platform_system == 'Windows'",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "pyinstaller>=6.8",
]

[project.scripts]
el-duendecito-de-vianni = "el_duendecito_de_vianni.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
